# me433

./: README.md
HW2/: blink.dis  blink.hex  cmake_install.cmake
hw10/: HW10-B_Cu.gbr  HW10-NPTH.drl  HW10-PTH.drl  HW10.kicad_pcb  HW10.kicad_pro  HW10.kicad_sch  HW10.kicad_sch-bak
hw11/: from PIL import Image.py
hw12/: CMakeLists.txt  servo.c
hw14/: FFT.py  q1.py  q2.py  q3.py
hw15/: bracket.SLDPRT  bracket.STL  wheel.SLDPRT
hw16/: CMakeLists.txt  MOTOR_control.c
hw3/: CMakeLists.txt  cdc.c
hw4/: DAC.c
hw5/: CMakeLists.txt  I2C.c
hw6/: CMakeLists.txt  oled.c
hw7/: CMakeLists.txt  uart.c
hw9/: CMakeLists.txt  pico_to_zero.c  uart_echo.py
